--- a/package.json
+++ b/package.json
@@ -9,14 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.9",
-    "@types/react": "18.2.19",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.46.0",
+    "@apollo/client": "^3.8.0",
+    "@apollo/datasource-rest": "^6.0.1",
+    "@apollo/server": "^4.9.1",
+    "@as-integrations/next": "^2.0.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.4",
+    "@next/bundle-analyzer": "^13.4.13",
+    "axios": "^1.4.0",
     "eslint-config-next": "13.4.13",
+    "graphql": "^16.7.1",
+    "mdi-material-ui": "^7.7.0",
     "next": "13.4.13",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-toastify": "^9.1.3"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "@types/axios": "^0.14.0",
+    "@types/node": "20.4.9",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "18.2.19",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.1",
     "typescript": "5.1.6"
   }
 }
