--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,12 @@
   },
   "extends": [
     "next/core-web-vitals",
+    "prettier",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
     "@rocketseat/eslint-config/react"
   ],
   "parser": "@typescript-eslint/parser",
@@ -23,7 +29,6 @@
     "eslint-plugin-import-helpers"
   ],
   "rules": {
-    "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/ban-types": "off",
     "@next/next/no-img-element": "off",
     "import/no-anonymous-default-export": "off",
