--- a/package.json
+++ b/package.json
@@ -15,22 +15,28 @@
     "@as-integrations/next": "^2.0.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.2.0",
     "@mui/material": "^5.14.4",
     "@next/bundle-analyzer": "^13.4.13",
     "axios": "^1.4.0",
+    "cookie": "^0.5.0",
     "eslint-config-next": "13.4.13",
     "graphql": "^16.7.1",
     "mdi-material-ui": "^7.7.0",
     "next": "13.4.13",
+    "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/axios": "^0.14.0",
+    "@types/cookie": "^0.5.1",
     "@types/node": "20.4.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.2.19",
