feat: list users

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "importHelpers": true,
+    "skipDefaultLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
