--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@apollo/server": "^4.9.1",
     "@as-integrations/next": "^2.0.1",
     "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.2.0",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
     "@next/bundle-analyzer": "^13.4.13",
     "axios": "^1.4.0",
@@ -29,8 +31,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-toastify": "^9.1.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
