feat: list products and edit or add product

--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "axios": "^1.4.0",
     "cookie": "^0.5.0",
     "eslint-config-next": "13.4.13",
+    "framer-motion": "^10.15.1",
     "graphql": "^16.7.1",
     "mdi-material-ui": "^7.7.0",
     "next": "13.4.13",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-perfect-scrollbar": "^1.5.8",
     "zod": "^3.21.4"
   },
@@ -41,8 +45,10 @@
     "@types/cookie": "^0.5.1",
     "@types/node": "20.4.9",
     "@types/nprogress": "^0.2.0",
+    "@types/numeral": "^2.0.2",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
+    "@types/react-lazy-load-image-component": "^1.5.3",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
