--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import-helpers"
   ],
   "rules": {
+    "react/display-name": "off",
     "@typescript-eslint/ban-types": "off",
     "@next/next/no-img-element": "off",
     "import/no-anonymous-default-export": "off",
